runtime/tests/cases/variables/errors/extern_redeclaration.bobbin
extern gold
extern gold

You have {gold} gold.
